WIP: passing paging token for "back to results" (NOTE: can't use token again, will need page number mechanism)

--- a/src/app/modules/paging/paging.component.html
+++ b/src/app/modules/paging/paging.component.html
@@ -3,7 +3,7 @@
     <a
       [routerLink]=""
       (click)="previous()"
-      class="font-black hover:text-orange-600"
+      class="cursor-pointer font-black hover:text-orange-600"
       >
       &lt; prev
     </a>
@@ -18,7 +18,7 @@
     <a
       [routerLink]=""
       (click)="next()"
-      class="font-black hover:text-orange-600"
+      class="cursor-pointer font-black hover:text-orange-600"
       >
       next &gt;
     </a>
