--- a/src/app/plugins/authentication/components/forgot-password/forgot-password.component.html
+++ b/src/app/plugins/authentication/components/forgot-password/forgot-password.component.html
@@ -1,6 +1,6 @@
 
 <div class="max-w-screen-xl w-full mx-auto relative">
-  <h2 class="text-3xl tracking-tight leading-10 font-extrabold text-gray-900 sm:leading-none md:text-4xl mb-8">
+  <h2 class="text-3xl tracking-tight leading-10 font-bold text-gray-900 sm:leading-none md:text-4xl mb-8">
     Forgot Your Console Password?
   </h2>
   <section class="mb-16">
