--- a/src/app/plugins/document-explorer/components/share-modal/share-modal.component.html
+++ b/src/app/plugins/document-explorer/components/share-modal/share-modal.component.html
@@ -2,7 +2,7 @@
   <div class="bg-white absolute w-full h-full md:w-1/3 md:h-auto md:top-1/3 md:left-1/3 rounded shadow-lg z-50 overflow-y-auto">
     <div class="py-4 text-left px-6">
       <div class="flex justify-between items-center mb-2 md:mb-4">
-        <h3 class="text-xl tracking-tight leading-10 font-extrabold text-gray-900 sm:leading-none md:text-2xl">
+        <h3 class="text-xl tracking-tight leading-10 font-bold text-gray-900 sm:leading-none md:text-2xl">
           Share Document
         </h3>
         <div
