--- a/src/app/plugins/api-explorer/components/api-item/api-item.component.html
+++ b/src/app/plugins/api-explorer/components/api-item/api-item.component.html
@@ -3,7 +3,7 @@
   <h4
     #header
     (click)="navigationService.collapseSubmenuItem(apiItem.clickedSubscriptionName, !isCollapsed);"
-    class="mx-4 mb-2 md:mb-8 text-xl tracking-tight leading-10 font-extrabold text-gray-900
+    class="mx-4 mb-2 md:mb-8 text-xl tracking-tight leading-10 font-bold text-gray-900
       hover:text-gray-700 sm:leading-none md:text-3xl cursor-pointer"
     >
     {{ apiItem.method }}
@@ -31,7 +31,7 @@
       <form [formGroup]="form">
         <div>
           <h6
-            class="mb-2 mx-4 md:mx-6 mr-4 mt-4 md:mb-8 text-xl tracking-tight leading-10 font-extrabold text-gray-900 sm:leading-none md:text-2xl"
+            class="mb-2 mx-4 md:mx-6 mr-4 mt-4 md:mb-8 text-xl tracking-tight leading-10 font-bold text-gray-900 sm:leading-none md:text-2xl"
             >
             Authentication
           </h6>
@@ -54,7 +54,7 @@
         </div>
         <div *ngIf="!apiItem.hasNoParams">
           <h6
-            class="mx-4 md:mx-6 mr-4 mt-6 mb-2 md:mb-8 text-xl tracking-tight leading-10 font-extrabold text-gray-900 sm:leading-none md:text-2xl"
+            class="mx-4 md:mx-6 mr-4 mt-6 mb-2 md:mb-8 text-xl tracking-tight leading-10 font-bold text-gray-900 sm:leading-none md:text-2xl"
             >
             Parameters
           </h6>
@@ -337,7 +337,7 @@
       <div class="flex flex-rows w-full">
         <div class="flex-grow-0">
           <h6
-            class="mx-4 md:mx-6 mr-4 mt-4 mb-2 md:mb-8 text-xl tracking-tight leading-10 font-extrabold text-gray-900 sm:leading-none md:text-2xl"
+            class="mx-4 md:mx-6 mr-4 mt-4 mb-2 md:mb-8 text-xl tracking-tight leading-10 font-bold text-gray-900 sm:leading-none md:text-2xl"
             >
             Request
           </h6>
@@ -418,7 +418,7 @@
             </div>
             <div *ngIf="responseData" [attr.id]="apiItem.apiServiceMethodName ? apiItem.apiServiceMethodName + 'Response' : ''">
               <h6
-                class="md:mx-2 mr-4 mt-4 md-2 md:mb-8 text-xl tracking-tight leading-10 font-extrabold text-gray-900 sm:leading-none md:text-2xl"
+                class="md:mx-2 mr-4 mt-4 md-2 md:mb-8 text-xl tracking-tight leading-10 font-bold text-gray-900 sm:leading-none md:text-2xl"
                 >
                 Response
               </h6>
