--- a/src/app/plugins/api-explorer/pages/explore/explore.component.html
+++ b/src/app/plugins/api-explorer/pages/explore/explore.component.html
@@ -1,7 +1,7 @@
 <div class="relative bg-white overflow-scroll-y mx-4">
   <div class="mt-8">
     <div class="max-w-screen-xl mx-auto relative">
-      <h2 class="text-2xl tracking-tight leading-10 font-extrabold text-gray-900 sm:leading-none md:text-4xl mb-4">
+      <h2 class="text-2xl tracking-tight leading-10 font-bold text-gray-900 sm:leading-none md:text-4xl mb-4">
         API Explorer
       </h2>
       <nav class="ml-8 lg:w-full mb-8 md:mb-16">
@@ -36,7 +36,7 @@
               Sites
             </a>
           </li>
-          <li>
+          <li *ngIf="configurationService.formkiqEdition && (configurationService.formkiqEdition === 'pro' || configurationService.formkiqEdition === 'enterprise')">
             <a
               [routerLink]="['/api']"
               [fragment]="presetsFragment"
@@ -46,10 +46,20 @@
               Presets
             </a>
           </li>
+          <li>
+            <a
+              [routerLink]="['/api']"
+              [fragment]="versionFragment"
+              (click)="navigationService.emitInlineNavItemClick('apiHeaderVersionClicked')"
+              class="font-bold text-orange-900 hover:text-orange-600"
+              >
+              Version
+            </a>
+          </li>
         </ul>
       </nav>
       <section class="lg:w-full mb-12">
-        <h3 #headerDocuments class="md:mx-4 mb-8 text-2xl tracking-tight leading-10 font-extrabold text-orange-600 sm:leading-none md:text-4xl">
+        <h3 #headerDocuments class="md:mx-4 mb-8 text-2xl tracking-tight leading-10 font-bold text-orange-600 sm:leading-none md:text-4xl">
           Documents
         </h3>
         <app-api-item id="GET-documents" [apiItem]="getDocumentsApiItem"></app-api-item>
@@ -62,25 +72,31 @@
         <app-api-item id="GET-document-tag" [apiItem]="getDocumentTagApiItem" [isCollapsed]="true"></app-api-item>
         <app-api-item id="DELETE-document-tag" [apiItem]="deleteDocumentTagApiItem" [isCollapsed]="true"></app-api-item>
         <app-api-item id="GET-document-url" [apiItem]="getDocumentUrlApiItem" [isCollapsed]="true"></app-api-item>
-        <app-api-item id="POST-document-formats" [apiItem]="postDocumentFormatsApiItem" [isCollapsed]="true"></app-api-item>
+        <app-api-item
+          *ngIf="configurationService.formkiqEdition && (configurationService.formkiqEdition === 'pro' || configurationService.formkiqEdition === 'enterprise')"
+          id="POST-document-formats" [apiItem]="postDocumentFormatsApiItem" [isCollapsed]="true"
+          ></app-api-item>
         <app-api-item id="GET-document-versions" [apiItem]="getDocumentVersionsApiItem" [isCollapsed]="true"></app-api-item>
         <app-api-item id="GET-documents-upload" [apiItem]="getDocumentsUploadApiItem" [isCollapsed]="true"></app-api-item>
         <app-api-item id="GET-document-upload" [apiItem]="getDocumentUploadApiItem" [isCollapsed]="true"></app-api-item>
       </section>
       <section class="lg:w-full mb-12">
-        <h3 #headerSearch class="mx-4 mb-8 text-3xl tracking-tight leading-10 font-extrabold text-orange-600 sm:leading-none md:text-4xl">
+        <h3 #headerSearch class="mx-4 mb-8 text-3xl tracking-tight leading-10 font-bold text-orange-600 sm:leading-none md:text-4xl">
           Search
         </h3>
         <app-api-item id="POST-search" [apiItem]="postSearchApiItem"></app-api-item>
       </section>
       <section class="lg:w-full mb-12">
-        <h3 #headerSites class="mx-4 mb-8 text-3xl tracking-tight leading-10 font-extrabold text-orange-600 sm:leading-none md:text-4xl">
+        <h3 #headerSites class="mx-4 mb-8 text-3xl tracking-tight leading-10 font-bold text-orange-600 sm:leading-none md:text-4xl">
           Sites
         </h3>
         <app-api-item id="GET-sites" [apiItem]="getSitesApiItem"></app-api-item>
       </section>
-      <section class="lg:w-full mb-12">
-        <h3 #headerPresets class="mx-4 mb-8 text-3xl tracking-tight leading-10 font-extrabold text-orange-600 sm:leading-none md:text-4xl">
+      <section
+        *ngIf="configurationService.formkiqEdition && (configurationService.formkiqEdition === 'pro' || configurationService.formkiqEdition === 'enterprise')"
+        class="lg:w-full mb-12"
+        >
+        <h3 #headerPresets class="mx-4 mb-8 text-3xl tracking-tight leading-10 font-bold text-orange-600 sm:leading-none md:text-4xl">
           Presets
         </h3>
         <app-api-item id="GET-presets" [apiItem]="getPresetsApiItem"></app-api-item>
@@ -89,6 +105,12 @@
         <app-api-item id="GET-preset-tags" [apiItem]="getPresetTagsApiItem" [isCollapsed]="true"></app-api-item>
         <app-api-item id="POST-preset-tags" [apiItem]="postPresetTagsApiItem" [isCollapsed]="true"></app-api-item>
         <app-api-item id="DELETE-preset-tag" [apiItem]="deletePresetTagApiItem" [isCollapsed]="true"></app-api-item>
+      </section>
+      <section class="lg:w-full mb-12">
+        <h3 #headerVersion class="mx-4 mb-8 text-3xl tracking-tight leading-10 font-bold text-orange-600 sm:leading-none md:text-4xl">
+          Version
+        </h3>
+        <app-api-item id="GET-version" [apiItem]="getVersionApiItem"></app-api-item>
       </section>
     </div>
   </div>
