--- a/src/app/plugins/tagging-tool/pages/screen/screen.component.html
+++ b/src/app/plugins/tagging-tool/pages/screen/screen.component.html
@@ -278,7 +278,7 @@
             </span>
           </button>
         </div>
-        <h2 class="text-2xl tracking-tight leading-10 font-extrabold text-gray-900 sm:leading-none md:text-4xl mb-4">
+        <h2 class="text-2xl tracking-tight leading-10 font-bold text-gray-900 sm:leading-none md:text-4xl mb-4">
           Document Tagging
           <span *ngIf="currentDocument" class="mt-2 block text-lg tracking-tight">
             Document:
