Enabling Webform and JSON content view - added document content to API Explorer - added tabs to document info page - WIP: checked contentType and content to determine if web form or json

--- a/src/app/plugins/api-explorer/pages/explore/explore.component.html
+++ b/src/app/plugins/api-explorer/pages/explore/explore.component.html
@@ -72,6 +72,7 @@
         <app-api-item id="GET-document-tag" [apiItem]="getDocumentTagApiItem" [isCollapsed]="true"></app-api-item>
         <app-api-item id="DELETE-document-tag" [apiItem]="deleteDocumentTagApiItem" [isCollapsed]="true"></app-api-item>
         <app-api-item id="GET-document-url" [apiItem]="getDocumentUrlApiItem" [isCollapsed]="true"></app-api-item>
+        <app-api-item id="GET-document-content" [apiItem]="getDocumentContentApiItem" [isCollapsed]="true"></app-api-item>
         <app-api-item
           *ngIf="configurationService.formkiqEdition && (configurationService.formkiqEdition === 'pro' || configurationService.formkiqEdition === 'enterprise')"
           id="POST-document-formats" [apiItem]="postDocumentFormatsApiItem" [isCollapsed]="true"
